# mvis

./: .gitignore  CMakeLists.txt  Makefile  README.md  rect.frag  rect.vert
cmake/: common.cmake
include/fft/: fft.h
include/mvis/: audio.h  engine.h  log.h  render.h  track.h  window.h
src/: fft.c  io.c  main.c  render.c  track.c  window.c
src/audio/: fft.c  fft.h  stream.c
src/engine/: da.h  engine.c  player.c  player.h  stream.c  stream.h  visualizer.c  visualizer.h
src/fft/: fft.c  fft.h
src/io/: io.c  io.h
src/render/: visualizer.c
src/window/: window.c  window.h
